hphp/test/quick/interface3.php.expectf

Fatal error: Class D contains abstract method (foo) and must therefore be declared abstract or implement the remaining methods in %s on line 5
